# Management

./: .dockerignore  .env  .gitignore  Dockerfile  Makefile  README  README.md  docker-compose-test.yml  docker-compose.yml  env.example  pyproject.toml  pyrightconfig.json  requierements.txt  requirements.txt
alembic/: env.py
alembic/versions/: aed0661c104a_initial_schema.py
app/: config.py  database.py  main.py
app/auth/: container.py  dependencies.py  exceptions.py  model.py  models.py  routers.py  schemas.py  security.py  service.py
app/auth/repositories/: password_reset.py  password_reset_repo.py  refresh_token.py  refresh_token_repo.py
app/auth/schemas/: api.py  dto.py
app/bootstraps/: seed_all.py  seed_permissions.py  seed_roles.py
app/core/: config.py  constants.py  global_errors.py  secrets.py  unit_of_work.py
app/core/constants/: inventory_permissions.py  order_permissions.py  system_permissions.py  system_roles.py  user_permissions.py
app/database/: base.py  session.py  unit_of_work.py  uow.py
app/inventory/: dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py
app/mail/: mailer.py
app/observability/: health.py  logging.py  request_id.py
app/orders/: dependencies.py  exceptions.py  repository.py  router.py  schemas.py  service.py
app/permissions/: constants.py  dependencies.py  factory.py  models.py  routers.py  seed.py  service.py
app/rbac/: borrador.txt  constants.py  dependencies.py  errors.py  factory.py  models.py  routers.py  schemas.py  seed.py  service.py
app/rbac/models/: role.py  (+6 more)
app/shared/: exceptions.py  handlers.py  helpers.py  roles.py
app/users/: borrador  constants.py  dependencies.py  errors.py  model.py  models.py  repository.py  router.py  routers.py  schemas.py  service.py
deploy/: README.md  ecs-task-definition.json
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: auth.md  inventory.md  orders.md  rbac.md  users.md
integration/: conftest.py  test_auth.py  test_inventory.py  test_user.py
integration/auth/: test_auth.py
integration/inventory/: test_category.py  test_inventory.py  test_location.py  test_product.py  test_stock.py
integration/order/: test_order.py  test_reservation.py
integration/rbac/: test_permission.py  test_rbac.py  test_role.py  test_roles.py  test_user_role.py
integration/user/: test_user.py
management.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_auth.py  test_inventory.py  test_user.py
tests/users/: test_router.py  test_service.py
(+56 files in other folders)
