[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "management"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
  "fastapi",
  "uvicorn",
  "gunicorn",

  "sqlalchemy[asyncio]",
  "asyncpg",
  "alembic",

  "pydantic",
  "pydantic-settings",
  "email-validator",

  "python-jose[cryptography]",
  "passlib[argon2]",
  "python-json-logger",
  "boto3 (>=1.43.23,<2.0.0)",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "httpx",
  "aiosqlite",
  "ruff",
]


[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["alembic*"]

[tool.ruff]
line-length = 88
src = ["app"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
combine-as-imports = true


