[tool.poetry]
name = "management"
version = "0.1.0"
description = ""
authors = []
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = "*"
uvicorn = "*"
gunicorn = "*"
sqlalchemy = {extras = ["asyncio"], version = "*"}
asyncpg = "*"
alembic = "*"
pydantic = "*"
pydantic-settings = "*"
email-validator = "*"
python-jose = {extras = ["cryptography"], version = "*"}
passlib = {extras = ["argon2"], version = "*"}
python-json-logger = "*"
boto3 = ">=1.43.23,<2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-asyncio = "*"
httpx = "*"
aiosqlite = "*"
ruff = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
src = ["app"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
combine-as-imports = true